# FXServer_DBWizard

./: .gitignore  CMakeLists.txt  output.sql
include/: ByteBuffer.h  Resource.h  ResourceManager.h
resources/A/: script.sql
resources/[Nested]/B/: fxmanifest.lua  script.sql
resources/[Nested]/C/: fxmanifest.lua  script.sql
resources/[Nested]/D/: fxmanifest.lua  script.sql
src/: ByteBuffer.cpp  Main.cpp  Resource.cpp  ResourceManager.cpp
